# azimuth

./: README.md  index.html  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
