[package]
name = "azimuth"
version = "0.1.0"
description = "A lovely notetaking app"
authors = ["Mark Richman"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = { version = "2.4.4", features = ["watch"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-http = "2.5.4"
base64 = "0.22.1"
tokio = { version = "1.48.0", features = ["full"] }
dirs = "6.0.0"
aws-config = "1.6"
aws-sdk-s3 = "1.82"
reqwest = { version = "0.12", features = ["json", "multipart"] }
walkdir = "2.5"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"

